ADD connection string

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DownloadAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=DownloadApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DownloadAppContextConnection": "Server=(localdb)\\;Database=DownloadApp;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "PostgresConnection": "Server=localhost;Port=5432;Database=DownloadApp;User Id=postgres;Password=fajnit1;"
   }
 }
