EDIT - dirty dziala pieknie

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DownloadAppContextConnection": "Server=(localdb)\\;Database=DownloadApp;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "PostgresConnection": "Server=localhost;Port=5432;Database=DownloadApp;User Id=postgres;Password=fajnit1;"
+    "PostgresConnection": "Host=db;Port=5432;Database=DownloadApp;User Id=postgres;Password=fajnit1;",
+    //"PostgresConnection": "Host=host.docker.internal,db;Port=5432;Database=DownloadApp;User Id=postgres;Password=fajnit1;"
   }
 }
